--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
         </section>
 
-        <section class="skill">
+      <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
 
@@ -505,8 +505,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">JavaScript(React)</h5>
               </div>
 
               <div class="skill-progress-bg">
@@ -518,8 +517,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
+                <h5 class="h5">CSS 3</h5>
               </div>
 
               <div class="skill-progress-bg">
@@ -531,8 +529,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">HTML 5</h5>
               </div>
 
               <div class="skill-progress-bg">
@@ -544,8 +541,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">SQL</h5>
               </div>
 
               <div class="skill-progress-bg">
@@ -557,7 +553,6 @@
           </ul>
 
         </section>
-
       </article>
 
 
