--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <section class="about-text">
           <p>
-            I'm full stack developer from Nairobi, Kenya, working in web development.
+            I'm a full stack developer from Nairobi, Kenya, working in web development.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
