--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   <p>
                     Capwell was hired to create a corporate identity. We were very pleased with the work done.He has a
                     lot of experience
-                    and is very concerned about the needs of client.
+                    and he exceeded our expectections.I will hire him again.
                   </p>
                 </div>
 
@@ -351,7 +351,7 @@
 
         <section class="clients"> 
 
-          <h3 class="h3 clients-title">Clients</h3>
+         <!-- <h3 class="h3 clients-title">Clients</h3> -->
 
           <ul class="clients-list has-scrollbar">
 
