--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
-          <form action="https://formsubmit.co/brocappy@gmail.com" class="form"  method="POST" data-form>
+          <form action="https://formsubmit.co/capwellmurimi@gmail.com" class="form"  method="POST" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
