--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+  <div id="preloader"></div>
 
   <!--
     - #MAIN
@@ -1036,7 +1037,12 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script>
+    var loader = document.getElementById("preloader")
 
+    window.addEventListener("load", function(){
+        loader.style.display = "none";
+    })
 </body>
 
 </html>
