--- a/index.html
+++ b/index.html
@@ -1043,6 +1043,7 @@
     window.addEventListener("load", function(){
         loader.style.display = "none";
     })
+    </script>
 </body>
 
 </html>
